Correct custom select height and add spacing in headers and rules items

--- a/src/custom_bootstrap.scss
+++ b/src/custom_bootstrap.scss
@@ -73,6 +73,7 @@ $font-weight-bold:            700;
 $grid-gutter-width: 0;
 
 $border-radius-xs:       .1rem;
+$border-width:                1px !default;
 $component-active-color:      $white;
 $component-active-bg:    $custom-gray;
 
@@ -97,18 +98,22 @@ $input-bg:                       $custom-gray;
 $input-line-height:              $input-btn-line-height !default;
 $input-disabled-bg:              $custom-gray;
 $input-color:                    $gray-200;
+$input-btn-border-width:      $border-width !default;
 $input-border-color:             transparent;
 $input-border-radius:            0;
+$input-border-width:                    $input-btn-border-width !default;
 $input-focus-border-color:       $gray-800;
 $input-focus-color:              $gray-100;
 $input-placeholder-color:        $gray-500;
 $input-group-addon-bg:           transparent;
 $input-padding-y:                       $input-btn-padding-y !default;
+$input-height-border:                   $input-border-width * 2 !default;
+$input-height:                   calc(#{$input-line-height * 1em} + #{$input-padding-y * 2} + #{$input-height-border}) !default;
 $custom-select-bg:               $custom-gray;
 $custom-select-indicator-color: $gray-600;
 $custom-select-border-radius: 0;
 $custom-select-focus-border-color: $gray-800;
-$custom-select-height: calc(#{$input-line-height * 1em} + #{$input-padding-y * 2});
+$custom-select-height: calc(#{$input-line-height * 1em} + #{$input-padding-y * 2} + #{$input-height-border});
 $nav-tabs-border-color:                       lighten($gray-900, 2%);
 
 $nav-tabs-border-radius:                      0;
